macOS: Fix handling of end gesture events.

Logic intended only to be run for magnify events was firing for scroll wheel
events. This made it very difficult to magnify.

Bug: 775522
Change-Id: I1b55c1ec2f6d86ff1c6c39c3f1361d9036f54adb
Reviewed-on: https://chromium-review.googlesource.com/833498
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525367}
Former-commit-id: 90bb84f64d90a32aee6f2d7534bdfe8c2000b7f1