content/browser/renderer_host/render_widget_host_view_mac_unittest.mm
@@ -172,17 +172,9 @@ NSEvent* MockMouseEventWithParams(CGEventType mouse_type,
   return event;
 }
 
-NSEventPhase PhaseForEventType(NSEventType type) {
-  if (type == NSEventTypeBeginGesture)
-    return NSEventPhaseBegan;
-  if (type == NSEventTypeEndGesture)
-    return NSEventPhaseEnded;
-  return NSEventPhaseChanged;
-}
-
-id MockGestureEvent(NSEventType type, double magnification) {
+id MockPinchEvent(NSEventPhase phase, double magnification) {
   id event = [OCMockObject mockForClass:[NSEvent class]];
-  NSEventPhase phase = PhaseForEventType(type);
+  NSEventType type = NSEventTypeMagnify;
   NSPoint locationInWindow = NSMakePoint(0, 0);
   CGFloat deltaX = 0;
   CGFloat deltaY = 0;
@@ -1506,15 +1498,15 @@ class RenderWidgetHostViewMacPinchTest : public RenderWidgetHostViewMacTest {
     return true;
   }
 
-  void SendBeginEvent() {
-    NSEvent* pinchBeginEvent = MockGestureEvent(NSEventTypeBeginGesture, 0);
+  void SendBeginPinchEvent() {
+    NSEvent* pinchBeginEvent = MockPinchEvent(NSEventPhaseBegan, 0);
     if (ShouldSendGestureEvents())
       [rwhv_cocoa_ beginGestureWithEvent:pinchBeginEvent];
     [rwhv_cocoa_ magnifyWithEvent:pinchBeginEvent];
   }
 
-  void SendEndEvent() {
-    NSEvent* pinchEndEvent = MockGestureEvent(NSEventTypeEndGesture, 0);
+  void SendEndPinchEvent() {
+    NSEvent* pinchEndEvent = MockPinchEvent(NSEventPhaseEnded, 0);
     [rwhv_cocoa_ magnifyWithEvent:pinchEndEvent];
     if (ShouldSendGestureEvents())
       [rwhv_cocoa_ endGestureWithEvent:pinchEndEvent];
@@ -1528,12 +1520,12 @@ TEST_F(RenderWidgetHostViewMacPinchTest, PinchThresholding) {
   // Do a gesture that crosses the threshold.
   {
     NSEvent* pinchUpdateEvents[3] = {
-        MockGestureEvent(NSEventTypeMagnify, 0.25),
-        MockGestureEvent(NSEventTypeMagnify, 0.25),
-        MockGestureEvent(NSEventTypeMagnify, 0.25),
+        MockPinchEvent(NSEventPhaseChanged, 0.25),
+        MockPinchEvent(NSEventPhaseChanged, 0.25),
+        MockPinchEvent(NSEventPhaseChanged, 0.25),
     };
 
-    SendBeginEvent();
+    SendBeginPinchEvent();
     base::RunLoop().RunUntilIdle();
     MockWidgetInputHandler::MessageVector events =
         host_->GetAndResetDispatchedMessages();
@@ -1562,7 +1554,7 @@ TEST_F(RenderWidgetHostViewMacPinchTest, PinchThresholding) {
     EXPECT_EQ("GesturePinchUpdate", GetMessageNames(events));
     EXPECT_FALSE(ZoomDisabledForPinchUpdateMessage(events));
 
-    SendEndEvent();
+    SendEndPinchEvent();
     base::RunLoop().RunUntilIdle();
     events = host_->GetAndResetDispatchedMessages();
     EXPECT_EQ("GesturePinchEnd", GetMessageNames(events));
@@ -1571,11 +1563,11 @@ TEST_F(RenderWidgetHostViewMacPinchTest, PinchThresholding) {
   // Do a gesture that doesn't cross the threshold, but happens when we're not
   // at page scale factor one, so it should be sent to the renderer.
   {
-    NSEvent* pinchUpdateEvent = MockGestureEvent(NSEventTypeMagnify, 0.25);
+    NSEvent* pinchUpdateEvent = MockPinchEvent(NSEventPhaseChanged, 0.25);
 
     rwhv_mac_->page_at_minimum_scale_ = false;
 
-    SendBeginEvent();
+    SendBeginPinchEvent();
     base::RunLoop().RunUntilIdle();
     MockWidgetInputHandler::MessageVector events =
         host_->GetAndResetDispatchedMessages();
@@ -1588,7 +1580,7 @@ TEST_F(RenderWidgetHostViewMacPinchTest, PinchThresholding) {
     EXPECT_EQ("GesturePinchBegin GesturePinchUpdate", GetMessageNames(events));
     EXPECT_FALSE(ZoomDisabledForPinchUpdateMessage(events));
 
-    SendEndEvent();
+    SendEndPinchEvent();
     base::RunLoop().RunUntilIdle();
     events = host_->GetAndResetDispatchedMessages();
     EXPECT_EQ("GesturePinchEnd", GetMessageNames(events));
@@ -1597,11 +1589,11 @@ TEST_F(RenderWidgetHostViewMacPinchTest, PinchThresholding) {
   // Do a gesture again, after the page scale is no longer at one, and ensure
   // that it is thresholded again.
   {
-    NSEvent* pinchUpdateEvent = MockGestureEvent(NSEventTypeMagnify, 0.25);
+    NSEvent* pinchUpdateEvent = MockPinchEvent(NSEventTypeMagnify, 0.25);
 
     rwhv_mac_->page_at_minimum_scale_ = true;
 
-    SendBeginEvent();
+    SendBeginPinchEvent();
     base::RunLoop().RunUntilIdle();
     MockWidgetInputHandler::MessageVector events =
         host_->GetAndResetDispatchedMessages();
@@ -1618,7 +1610,7 @@ TEST_F(RenderWidgetHostViewMacPinchTest, PinchThresholding) {
     EXPECT_EQ("GesturePinchBegin GesturePinchUpdate", GetMessageNames(events));
     EXPECT_TRUE(ZoomDisabledForPinchUpdateMessage(events));
 
-    SendEndEvent();
+    SendEndPinchEvent();
     base::RunLoop().RunUntilIdle();
     events = host_->GetAndResetDispatchedMessages();
     EXPECT_EQ("GesturePinchEnd", GetMessageNames(events));
